// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentDataHighlight renders PaymentDataHighlight with tooltip 1`] = `
<div>
  <div
    class="payment-data-highlight__wrapper"
  >
    <div
      class="payment-data-highlight__visible"
    >
      <div
        class="payment-data-highlight__label"
      >
        <span>
          Deposits
        </span>
        <button
          class="wcpay-tooltip__content-wrapper wcpay-tooltip--click__content-wrapper"
          type="button"
        >
          <div
            class="wcpay-tooltip__content-wrapper"
          >
            <div
              role="button"
              tabindex="0"
            >
              <svg
                class="gridicon gridicons-help-outline"
                height="16"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M12 4c4.411 0 8 3.589 8 8s-3.589 8-8 8-8-3.589-8-8 3.589-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm4 8a4 4 0 00-8 0h2c0-1.103.897-2 2-2s2 .897 2 2-.897 2-2 2a1 1 0 00-1 1v2h2v-1.141A3.991 3.991 0 0016 10zm-3 6h-2v2h2v-2z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </button>
      </div>
      <div
        class="payment-data-highlight__amount"
      >
        <div
          class="payment-data-highlight__amount-number"
        >
          €3,143.00
        </div>
        <div
          class="payment-data-highlight__amount-change"
        >
          <div
            class="payment-data-highlight__amount-change-arrow-up"
          >
            <span
              class="payment-data-highlight__amount-change-icon"
            >
              <svg
                class="gridicon gridicons-arrow-up"
                height="12"
                viewBox="0 0 24 24"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M13 20V7.83l5.59 5.59L20 12l-8-8-8 8 1.41 1.41L11 7.83V20h2z"
                  />
                </g>
              </svg>
            </span>
            <span
              class="payment-data-highlight__amount-change-arrow-up-percentage"
            >
              22
              %
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="payment-data-highlight__view-report"
    >
      <a
        data-link-type="wc-admin"
        href="#"
      >
        View report
      </a>
    </div>
  </div>
</div>
`;

exports[`PaymentDataHighlight renders PaymentDataHighlight without tooltip 1`] = `
<div>
  <div
    class="payment-data-highlight__wrapper"
  >
    <div
      class="payment-data-highlight__visible"
    >
      <div
        class="payment-data-highlight__label"
      >
        <span>
          Transactions
        </span>
      </div>
      <div
        class="payment-data-highlight__amount"
      >
        <div
          class="payment-data-highlight__amount-number"
        >
          €2,143.00
        </div>
        <div
          class="payment-data-highlight__amount-change"
        >
          <div
            class="payment-data-highlight__amount-change-arrow-up"
          >
            <span
              class="payment-data-highlight__amount-change-icon"
            >
              <svg
                class="gridicon gridicons-arrow-up"
                height="12"
                viewBox="0 0 24 24"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M13 20V7.83l5.59 5.59L20 12l-8-8-8 8 1.41 1.41L11 7.83V20h2z"
                  />
                </g>
              </svg>
            </span>
            <span
              class="payment-data-highlight__amount-change-arrow-up-percentage"
            >
              22
              %
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="payment-data-highlight__view-report"
    >
      <a
        data-link-type="wc-admin"
        href="#"
      >
        View report
      </a>
    </div>
  </div>
</div>
`;
